# ai-control-plane

./: .env.example  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend-systems/crm-service/: Dockerfile  requirements.txt
backend-systems/crm-service/app/: main.py
backend-systems/notification-service/: Dockerfile  requirements.txt
backend-systems/notification-service/app/: main.py
backend-systems/ticketing-service/: Dockerfile  requirements.txt
backend-systems/ticketing-service/app/: main.py
docs/: resona-integration.md
infra/observability/: otel-collector-config.yaml  prometheus.yml
infra/observability/opa/: policy.rego
infra/terraform/: main.tf  variables.tf
libs/shared_schemas/: pyproject.toml  requirements-dev.txt
libs/shared_schemas/shared_schemas/: __init__.py  agent.py  events.py  logging_config.py  policy.py  tool.py
libs/shared_schemas/tests/: test_models.py
services/agent-runtime/: Dockerfile  requirements-dev.txt  requirements.txt
services/agent-runtime/app/: config.py  control_plane_client.py  llm_client.py  loop.py  main.py  mcp_client.py
services/audit-consumer/: Dockerfile  main.py  requirements.txt
services/control-plane/: Dockerfile  alembic.ini  pytest.ini  requirements-dev.txt  requirements.txt
services/control-plane/alembic/: env.py
services/control-plane/app/: auth.py  config.py  main.py  policy.py  rate_limit.py  registry.py
services/control-plane/tests/: test_auth.py  test_policy.py  (+1 more)
services/tool-gateway/: Dockerfile  pytest.ini  requirements-dev.txt  requirements.txt
(+27 files in other folders)
