[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shared_schemas"
version = "0.1.0"
description = "Shared Pydantic v2 models for the Enterprise AI Control Plane"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20,<1.0",
]
